--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactportfolio",
-  "homepage": "https://lsegura06.github.io/SeguraReactPortfolio",
+  "homepage": "https://lsegura06.github.io/SeguraReactPortfolio/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
