--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "yup": "^1.0.2"
   },
   "scripts": {
-    "predeply": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
