--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactportfolio",
+  "name": "segurareactportfolio",
   "homepage": "https://lsegura06.github.io/SeguraReactPortfolio",
   "version": "0.1.0",
   "private": true,
